ole분석 구현하기